@@ -58,9 +58,19 @@
             <version>${jackson.version}</version>
          </dependency>
          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+         </dependency>
+         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.7.0</version>
          </dependency>
          <dependency>
             <groupId>org.apache.commons</groupId>
@@ -100,6 +110,11 @@
          <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
          </dependency>
          <dependency>
@@ -166,6 +181,7 @@
                   <release>${java.version}</release>
                   <source>${java.version}</source>
                   <target>${java.version}</target>
+                  <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
             </plugin>
             <plugin>
